add ws